attempt to fix invisible buttons 6

--- a/assets/css/Mobile_overlayUI.css
+++ b/assets/css/Mobile_overlayUI.css
@@ -124,7 +124,7 @@
     /* left: var(--ring-ctrl-padding-x); */
     left: 200px;
     background: var(--left-arrow-icon-url);
-    background-color: red;
+    background-color: green;
     background-size: 100%, 100%;
     -o-background-size: cover;
     -moz-background-size: cover;
